dynamix/force-app/main/default/objects/Property__c/fields/Annexure__c.field-meta.xml
<CustomField>
    <fullName>Annexure__c</fullName>
    <label>Annexure</label>
    <type>Url</type>
</CustomField>