dynamix/force-app/main/default/objects/Property__c/fields/Annexures__c.field-meta.xml
<CustomField>
    <fullName>Annexures__c</fullName>
    <label>Annexures</label>
    <type>Url</type>
</CustomField>