dynamix/force-app/main/default/objects/Property__c/fields/Approved_Area__c.field-meta.xml
<CustomField>
    <fullName>Approved_Area__c</fullName>
    <label>Approved RERA Carpet Area (in sqft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>