dynamix/force-app/main/default/objects/Property__c/fields/Approved_Area_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Approved_Area_in_sqmtr__c</fullName>
    <formula>Approved_Area__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved RERA Carpet Area(in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>