dynamix/force-app/main/default/objects/Property__c/fields/Approved_Car_Park_Payment_Plan_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Approved_Car_Park_Payment_Plan_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Car Park Payment Plan Uploaded</label>
    <type>Checkbox</type>
</CustomField>