dynamix/force-app/main/default/objects/Property__c/fields/Approved_Deck_Area_in_sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Approved_Deck_Area_in_sq_mt__c</fullName>
    <formula>Deck_Approved_Area__c/10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Deck Area (in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>