dynamix/force-app/main/default/objects/Property__c/fields/Bare_Flat_Option__c.field-meta.xml
<CustomField>
    <fullName>Bare_Flat_Option__c</fullName>
    <label>Bare Flat Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Furnished</fullName>
            </value>
            <value>
                <fullName>Bare</fullName>
            </value>
            <value>
                <fullName>Semi-Furnished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>