dynamix/force-app/main/default/objects/Property__c/fields/Car_Park_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Agreement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Park Agreement Uploaded</label>
    <type>Checkbox</type>
</CustomField>