dynamix/force-app/main/default/objects/Property__c/fields/Car_Parking_Value__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Value__c</fullName>
    <label>Car Parking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>