dynamix/force-app/main/default/objects/Property__c/fields/Customer_Inspection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inspection_Start_Date__c</fullName>
    <label>Customer Inspection Start Date</label>
    <type>DateTime</type>
</CustomField>