dynamix/force-app/main/default/objects/Property__c/fields/Customer_Unit_Inspection_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Inspection_Scheduled__c</fullName>
    <formula>DATEVALUE( Customer_Unit_Inspection_Scheduled_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Unit Inspection Scheduled</label>
    <type>Date</type>
</CustomField>