dynamix/force-app/main/default/objects/Property__c/fields/Date_of_Car_Park_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Car_Park_Booking__c</fullName>
    <label>Date of Car Park Booking</label>
    <type>Date</type>
</CustomField>