dynamix/force-app/main/default/objects/Property__c/fields/Deck_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Deck_Carpet_Area__c</fullName>
    <label>Deck Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>