dynamix/force-app/main/default/objects/Property__c/fields/Deck_Carpet_Area_c_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Deck_Carpet_Area_c_in_sqmtr__c</fullName>
    <formula>Deck_Carpet_Area__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deck_Carpet_Area__c (in sqmtr.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>