dynamix/force-app/main/default/objects/Property__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Residential</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>