dynamix/force-app/main/default/objects/Property__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <label>Efficiency %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>