dynamix/force-app/main/default/objects/Property__c/fields/Electric_Meter_Installed__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Installed__c</fullName>
    <label>Electric Meter Installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>