dynamix/force-app/main/default/objects/Property__c/fields/Electric_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Number__c</fullName>
    <label>Electric Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>