dynamix/force-app/main/default/objects/Property__c/fields/Electric_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Reading__c</fullName>
    <label>Electric Meter Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>