dynamix/force-app/main/default/objects/Property__c/fields/Enclosed_balcony__c.field-meta.xml
<CustomField>
    <fullName>Enclosed_balcony__c</fullName>
    <label>Approved Enclosed Balcony Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>