dynamix/force-app/main/default/objects/Property__c/fields/Enclosed_Balcony_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Enclosed_Balcony_in_sqmtr__c</fullName>
    <formula>Enclosed_balcony__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Enclosed Balcony(in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>