dynamix/force-app/main/default/objects/Property__c/fields/EV_Charging__c.field-meta.xml
<CustomField>
    <fullName>EV_Charging__c</fullName>
    <label>EV Charging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>