dynamix/force-app/main/default/objects/Property__c/fields/Flat_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVERED STACK</fullName>
            </value>
            <value>
                <fullName>STACK</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK G</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>PENTHOUSES</fullName>
            </value>
            <value>
                <fullName>ROW HOUSES</fullName>
            </value>
            <value>
                <fullName>VILLAS</fullName>
            </value>
            <value>
                <fullName>BUNGALOW</fullName>
            </value>
            <value>
                <fullName>SHOP WITH TERRACE</fullName>
            </value>
            <value>
                <fullName>SHOP WITHOUT TERRACE</fullName>
            </value>
            <value>
                <fullName>OFFICE WITH TERRACE</fullName>
            </value>
            <value>
                <fullName>OFFICE WITHOUT TERRACE</fullName>
            </value>
            <value>
                <fullName>REFUGEE</fullName>
            </value>
            <value>
                <fullName>STUDIO</fullName>
            </value>
            <value>
                <fullName>CAR PARKING</fullName>
            </value>
            <value>
                <fullName>BIKE PARKING</fullName>
            </value>
            <value>
                <fullName>BASEMENT PARKING</fullName>
                <isActive>false</isActive>
                <label>BASEMENT PARKING</label>
            </value>
            <value>
                <fullName>DOUBLE OPEN PARKING</fullName>
                <isActive>false</isActive>
                <label>DOUBLE OPEN PARKING</label>
            </value>
            <value>
                <fullName>DOUBLE PODIUM PARKING</fullName>
                <isActive>false</isActive>
                <label>DOUBLE PODIUM PARKING</label>
            </value>
            <value>
                <fullName>DOUBLE STILT PARKING</fullName>
                <isActive>false</isActive>
                <label>DOUBLE STILT PARKING</label>
            </value>
            <value>
                <fullName>OPEN PARKING</fullName>
                <isActive>false</isActive>
                <label>OPEN PARKING</label>
            </value>
            <value>
                <fullName>PODIUM PARKING</fullName>
                <isActive>false</isActive>
                <label>PODIUM PARKING</label>
            </value>
            <value>
                <fullName>STILT PARKING</fullName>
                <isActive>false</isActive>
                <label>STILT PARKING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>