dynamix/force-app/main/default/objects/Property__c/fields/Flower_Bed_Area__c.field-meta.xml
<CustomField>
    <fullName>Flower_Bed_Area__c</fullName>
    <label>Flower Bed Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>