dynamix/force-app/main/default/objects/Property__c/fields/FM_Customer_Unit_Task__c.field-meta.xml
<CustomField>
    <fullName>FM_Customer_Unit_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Customer Unit Task</label>
    <type>Checkbox</type>
</CustomField>