dynamix/force-app/main/default/objects/Property__c/fields/FM_User__c.field-meta.xml
<CustomField>
    <fullName>FM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>