dynamix/force-app/main/default/objects/Property__c/fields/Handover_Completion__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completion__c</fullName>
    <formula>Project__r.Handover_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handover Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>