dynamix/force-app/main/default/objects/Property__c/fields/HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code__c</fullName>
    <label>HSN Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>995411</fullName>
                <label>Residential</label>
            </value>
            <value>
                <fullName>995412</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>999599</fullName>
                <label>Advance society maintenance charges</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>