dynamix/force-app/main/default/objects/Property__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>