dynamix/force-app/main/default/objects/Property__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZFER</fullName>
                <label>Flat material</label>
            </value>
            <value>
                <fullName>ZSER</fullName>
                <label>Service material</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>