dynamix/force-app/main/default/objects/Property__c/fields/No_of_Bike_Parking__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bike_Parking__c</fullName>
    <label>No. of Bike Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>