dynamix/force-app/main/default/objects/Property__c/fields/Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puzzle Tandem</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>Surface</fullName>
            </value>
            <value>
                <fullName>Stack</fullName>
            </value>
            <value>
                <fullName>2 Wheeler as per Old DCPR</fullName>
            </value>
            <value>
                <fullName>2 Wheeler as per New DCPR</fullName>
            </value>
            <value>
                <fullName>2-Wheeler Parking</fullName>
            </value>
            <value>
                <fullName>Dependant</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Basement Parking</fullName>
            </value>
            <value>
                <fullName>Stilt Parking</fullName>
            </value>
            <value>
                <fullName>Podium Parking</fullName>
            </value>
            <value>
                <fullName>Open Parking</fullName>
            </value>
            <value>
                <fullName>Double Podium Parking</fullName>
            </value>
            <value>
                <fullName>Double Stilt Parking</fullName>
            </value>
            <value>
                <fullName>Double Open Parking</fullName>
            </value>
            <value>
                <fullName>CAR PARK TYPE</fullName>
                <isActive>false</isActive>
                <label>CAR PARK TYPE</label>
            </value>
            <value>
                <fullName>Stack (Pit)</fullName>
                <isActive>false</isActive>
                <label>Stack (Pit)</label>
            </value>
            <value>
                <fullName>UNIT TYPE</fullName>
                <isActive>false</isActive>
                <label>UNIT TYPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>