dynamix/force-app/main/default/objects/Property__c/fields/Post_OC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_OC_Start_Date__c</fullName>
    <label>Post OC Start Date</label>
    <type>DateTime</type>
</CustomField>