dynamix/force-app/main/default/objects/Property__c/fields/Pre_Allocated_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Pre_Allocated_Car_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Allocated Car Parking</label>
    <type>Checkbox</type>
</CustomField>