dynamix/force-app/main/default/objects/Property__c/fields/Pricing_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan_Detail__c</fullName>
    <label>Pricing Plan Detail</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>