dynamix/force-app/main/default/objects/Property__c/fields/Property_Area__c.field-meta.xml
<CustomField>
    <fullName>Property_Area__c</fullName>
    <label>Property Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>