dynamix/force-app/main/default/objects/Property__c/fields/Property_Area_in_bigha__c.field-meta.xml
<CustomField>
    <fullName>Property_Area_in_bigha__c</fullName>
    <formula>Property_Area_in_sqft__c / 17452.0069808</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Area (in bigha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>