dynamix/force-app/main/default/objects/Property__c/fields/Property_Area_UOM__c.field-meta.xml
<CustomField>
    <fullName>Property_Area_UOM__c</fullName>
    <label>Property Area UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sq.Ft.</fullName>
                <default>true</default>
                <label>Sq.Ft.</label>
            </value>
            <value>
                <fullName>Sq.Meter</fullName>
            </value>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>Guntha</fullName>
            </value>
            <value>
                <fullName>Bigha</fullName>
            </value>
            <value>
                <fullName>Sq. Yards</fullName>
            </value>
            <value>
                <fullName>Hectares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>