dynamix/force-app/main/default/objects/Property__c/fields/Property_Flag__c.field-meta.xml
<CustomField>
    <fullName>Property_Flag__c</fullName>
    <formula>Tower__r.Name + &apos; - &apos; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Flag</label>
    <type>Text</type>
</CustomField>