dynamix/force-app/main/default/objects/Property__c/fields/Property_Price_Slab__c.field-meta.xml
<CustomField>
    <fullName>Property_Price_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Price Slab</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please add price slab as per project selected</errorMessage>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Pricing_Plan__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pricing_Plan__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>