dynamix/force-app/main/default/objects/Property__c/fields/Property_Series__c.field-meta.xml
<CustomField>
    <fullName>Property_Series__c</fullName>
    <label>Property Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Series 1</fullName>
            </value>
            <value>
                <fullName>Series 2</fullName>
            </value>
            <value>
                <fullName>Series 3</fullName>
            </value>
            <value>
                <fullName>Series 4</fullName>
            </value>
            <value>
                <fullName>Series 5</fullName>
            </value>
            <value>
                <fullName>Series 6</fullName>
            </value>
            <value>
                <fullName>Series 7</fullName>
            </value>
            <value>
                <fullName>Series 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>