dynamix/force-app/main/default/objects/Property__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Refuge</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Pre - Allotted</fullName>
            </value>
            <value>
                <fullName>Allotted</fullName>
            </value>
            <value>
                <fullName>Allotted In Progress</fullName>
            </value>
            <value>
                <fullName>Confirmed Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>