dynamix/force-app/main/default/objects/Property__c/fields/Proposed_Area__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Area__c</fullName>
    <label>Proposed RERA Carpet Area(in sqft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>