dynamix/force-app/main/default/objects/Property__c/fields/Proposed_Area_c_in_sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Area_c_in_sqmtr__c</fullName>
    <formula>Proposed_Area__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed RERA Carpet Area(in sq. mt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>