dynamix/force-app/main/default/objects/Property__c/fields/Proposed_Enclosed_Balcony_Area__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Enclosed_Balcony_Area__c</fullName>
    <label>Proposed Enclosed Balcony Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>