dynamix/force-app/main/default/objects/Property__c/fields/Proposed_Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Total_Area__c</fullName>
    <formula>Proposed_Area__c + Proposed_Utility_Area__c + Deck_Proposed_Area__c + Proposed_Enclosed_Balcony_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Total Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>